--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,52 @@
-version: '2'
+version: '3'
 services:
-  php:
-    image: yiisoftware/yii2-php:7.4-apache
+  nginx:
+    image: nginx
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf # Mounting default.conf here
+      - ./:/var/www/html # Application files
+
     ports:
-      - '8000:80'
+      - "80:80"
+    depends_on:
+      - php-fpm
+      - data
+
+  php-fpm:
+    image: php:8.3-fpm
+    volumes:
+      - ./:/var/www/html # Application files
+    depends_on:
+      - data
+
+  data:
+    image: mysql:latest
+
+    container_name: data
+    environment:
+
+      MYSQL_DATABASE: yii2basic
+      MYSQL_USER: yii2basic
+      MYSQL_PASSWORD: yii2basic
+      MYSQL_ROOT_PASSWORD: yii2basic
+
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: data
+
+      MYSQL_PASSWORD: yii2basic
+      MYSQL_ROOT_PASSWORD: yii2basic
+
+    ports:
+      - "8080:80"
+    depends_on:
+      - data
+
+volumes:
+  db_data:
