--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ composer.phar
 phpunit.phar
 # local phpunit config
 /phpunit.xml
-
+/web/uploadImage/
 tests/_output/*
 tests/_support/_generated
 
